implement `cppxml::encode` 2nd arg(flag) to control the xml indent

--- a/example/example.conf
+++ b/example/example.conf
@@ -19,7 +19,8 @@ http {
         local str = fin:read("*a")
         fin:close()
         local tbl = json.decode(str)
-        ngx.say(xml.encode(tbl))
+        ngx.say('xml with indent', xml.encode(tbl))
+        ngx.say('xml without indent', xml.encode(tbl, 1))
       }
     }
 
